--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -5,5 +5,13 @@
     </head>
     <body>
         <h1>To do list:</h1>
+        <table>
+            {% for item in items %}
+                <tr>
+                    <td>{{ item.name }}</td>
+                    <td>{{ item.done }}</td>
+                </tr>
+            {% endfor %}
+        </table>
     </body>
 </html>
