--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -8,10 +8,17 @@
         <table>
             {% for item in items %}
                 <tr>
-                    <td>{{ item.name }}</td>
-                    <td>{{ item.done }}</td>
+                    {% if item.done %}
+                        <td><strike>{{ item.name }}</strike></td>
+                    {% else %}
+                        <td>{{ item.name }}</td>
+                    {% endif %}
                 </tr>
+                <!-- empty is a special tag to be used before endfor -->
+                {% empty %}
+                <p>nothing to do</p>
             {% endfor %}
         </table>
+        <a href="/add">Add an item</a>
     </body>
 </html>
