--- a/todo/templates/todo/edit_item.html
+++ b/todo/templates/todo/edit_item.html
@@ -4,8 +4,8 @@
         <title>to do</title>
     </head>
     <body>
-        <h1>Add a todo item</h1>
-        <form method="POST" action="add">
+        <h1>Edit todo item</h1>
+        <form method="POST">
             {% csrf_token %}
             {{ form.as_p }}
 
@@ -25,7 +25,7 @@
         -->
             <div>
                 <p>
-                    <button type="submit">Add Item</button>
+                    <button type="submit">Update Item</button>
                 </p>
             </div>
         </form>
