--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -14,8 +14,18 @@
                         <td>{{ item.name }}</td>
                     {% endif %}
                     <td>
+                        <a href="/toggle/{{ item.id }}">
+                            <button>toggle</button>
+                        </a>
+                    </td>
+                    <td>
                         <a href="/edit/{{ item.id }}">
                             <button>edit</button>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="/delete/{{ item.id }}">
+                            <button>delete</button>
                         </a>
                     </td>
                 </tr>
